<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Result">

    <TextView
        android:id="@+id/txtboxresult"
        android:layout_width="0dp"
        android:layout_height="83dp"
        android:background="@color/purple_200"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/learn_parts_of_speech"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="0dp"
        android:layout_height="143dp"
        android:layout_marginTop="152dp"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textColor="@color/backcolor"
        android:textSize="34sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="118dp"
        android:layout_marginTop="20dp"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textColor="#9C27B0"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <Button
        android:id="@+id/button18"
        android:layout_width="271dp"
        android:layout_height="57dp"
        android:layout_marginTop="60dp"
        android:background="@color/backcolor"
        android:onClick="Back"
        android:text="@string/continue_learning"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        tools:ignore="OnClick,UsingOnClickInXml" />
</androidx.constraintlayout.widget.ConstraintLayout>