<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#3F51B5"
    tools:context=".Quiz">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="83dp"


        android:background="@color/purple_200"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/quiz"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="91dp"

        android:layout_marginLeft="?android:attr/scrollbarSize"
        android:layout_marginTop="?android:attr/scrollbarSize"
        android:layout_marginRight="?android:attr/scrollbarSize"
        android:text="@string/textview"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <LinearLayout
        android:layout_width="349dp"
        android:layout_height="418dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="?android:attr/scrollbarSize"
            android:layout_marginTop="?android:attr/scrollbarSize"
            android:layout_marginRight="?android:attr/scrollbarSize"
            android:layout_marginBottom="?android:attr/scrollbarSize"
            android:background="@color/backcolor"
            android:textSize="20sp"
            android:visibility="visible"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="?android:attr/scrollbarSize"
            android:layout_marginTop="?android:attr/scrollbarSize"
            android:layout_marginRight="?android:attr/scrollbarSize"
            android:layout_marginBottom="?android:attr/scrollbarSize"
            android:background="@color/backcolor"
            android:text="@string/button"
            android:textSize="20sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="?android:attr/scrollbarSize"
            android:layout_marginTop="?android:attr/scrollbarSize"
            android:layout_marginRight="?android:attr/scrollbarSize"
            android:layout_marginBottom="?android:attr/scrollbarSize"
            android:background="@color/backcolor"
            android:text="@string/button"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="?android:attr/scrollbarSize"
            android:layout_marginTop="?android:attr/scrollbarSize"
            android:layout_marginRight="?android:attr/scrollbarSize"
            android:layout_marginBottom="?android:attr/scrollbarSize"
            android:background="@color/backcolor"
            android:text="@string/button"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button11"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginLeft="?android:attr/scrollbarSize"
            android:layout_marginTop="?android:attr/scrollbarSize"
            android:layout_marginRight="?android:attr/scrollbarSize"
            android:layout_marginBottom="?android:attr/scrollbarSize"
            android:background="@color/purple_200"

            android:text="@string/next"
            android:textSize="20sp"
            tools:ignore="OnClick,UsingOnClickInXml" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="67dp"

        android:layout_marginLeft="?android:attr/scrollbarSize"
        android:layout_marginTop="?android:attr/scrollbarSize"
        android:layout_marginRight="?android:attr/scrollbarSize"
        android:text="@string/correct_answer"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
</androidx.constraintlayout.widget.ConstraintLayout>